--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -301,8 +301,8 @@ ccd:
       imagePullPolicy: Always
       ingressHost: ras-${SERVICE_FQDN}
       releaseNameOverride: ${SERVICE_NAME}-am-role-assignment-service
-      readinessDelay: 240
-      livenessDelay: 240
+      readinessDelay: 90
+      livenessDelay: 90
       environment:
         AM_ROLE_ASSIGNMENT_SERVICE_SECRET: ${AM_ROLE_ASSIGNMENT_SERVICE_SECRET}
         ROLE_ASSIGNMENT_DB_HOST: sscs-preview.postgres.database.azure.com
@@ -618,7 +618,7 @@ ccd:
 
   #Use this image to import your CCD definition. To have an image available, create a git tag and push it.
   ccd-definition-importer:
-    image: hmctspublic.azurecr.io/sscs/ccd-definition-importer-benefit:S11790AnonProd
+    image: hmctspublic.azurecr.io/sscs/ccd-definition-importer-benefit:S11790BnonProd
     definitionFilename: sscs-ccd.xlsx
     redirectUri: http://${SERVICE_NAME}-ccd-admin-web/oauth2redirect
     environment:
@@ -637,7 +637,7 @@ ccd:
       CCD_DEF_MYA_REPRESENTATIVE_LINK: http://${SERVICE_NAME}-ccd-definition-store
       CCD_DEF_MYA_APPOINTEE_LINK: http://${SERVICE_NAME}-ccd-definition-store
       CCD_DEF_ENV: 'PROD'
-      CCD_DEF_VERSION: S11790AnonProd
+      CCD_DEF_VERSION: S11790BnonProd
     secrets: []
     userRoles:
       - citizen
