--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -189,7 +189,7 @@ ccd:
 
   am-role-assignment-service:
     java:
-      image: 'hmctspublic.azurecr.io/am/role-assignment-service:pr-2101'
+      image: 'hmctspublic.azurecr.io/am/role-assignment-service:pr-2101-261e21e-20231220135314'
       imagePullPolicy: Always
       ingressHost: ""
       releaseNameOverride: ${SERVICE_NAME}-am-role-assignment-service
