--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -195,8 +195,10 @@ ccd:
       releaseNameOverride: ${SERVICE_NAME}-am-role-assignment-service
       readinessDelay: 240
       livenessDelay: 240
-      memoryLimits: "2Gi"
-      memoryRequests: "1Gi"
+      memoryLimits: 2Gi
+      memoryRequests: 1Gi
+      cpuRequests: 500m
+      cpuLimits: 2500m
       environment:
         ROLE_ASSIGNMENT_DB_HOST: ${SERVICE_NAME}-postgresql
         ROLE_ASSIGNMENT_DB_NAME: "role_assignment"
