--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -211,6 +211,7 @@ sscs-tya-notif:
 sscs-ccd-callback-orchestrator:
   enabled: true
   java:
+    ingressHost: cbo-{SERVICE_FQDN}
     image: hmctspublic.azurecr.io/sscs/ccd-callback-orchestrator:latest
     releaseNameOverride: ${SERVICE_NAME}-sscs-ccd-callback-orchestrator
     readinessDelay: 90
