--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -116,6 +116,7 @@ xui-webapp:
       REDISCLOUD_URL: http://dummyrediscloudurl
       UV_THREADPOOL_SIZE: 128
       PROTOCOL: http
+      SERVICES_HEARINGS_SSCS_CASETYPES: Benefit-sscs-pr-3575
     keyVaults:
       rpx:
         resourceGroup: rpx
