--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -116,7 +116,7 @@ xui-webapp:
       REDISCLOUD_URL: http://dummyrediscloudurl
       UV_THREADPOOL_SIZE: 128
       PROTOCOL: http
-      SERVICES_HEARINGS_COMPONENT_API_SSCS: hearings-${SERVICE_FQDN}
+      SERVICES_HEARINGS_COMPONENT_API_SSCS: http://sscs-hearings-api-aat.service.core-compute-aat.internal
     keyVaults:
       rpx:
         resourceGroup: rpx
