--- a/build.gradle
+++ b/build.gradle
@@ -339,7 +339,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '5.3.1'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '98d1754'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.10'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.42.0'
