Filter out hearings without hearingDate

--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -76,6 +76,7 @@ java:
     CASE_ACCESS_MANAGEMENT_FEATURE: false
     ELINKS_V2_FEATURE_ENABLED: false
     DELETED_REDACTED_DOC_ENABLED: false
+    UPLOAD_HEARING_FILTER_ENABLED: false
 
 idam-pr:
   enabled: false
