--- a/build.gradle
+++ b/build.gradle
@@ -262,8 +262,14 @@ dependencyManagement {
             entry 'snakeyaml'
         }
 
+        // CVE-2023-46604
+        dependencySet(group: 'org.apache.activemq', version: '5.16.7') {
+            entry 'activemq-broker'
+            entry 'activemq-client'
+        }
+
         // CVE-2022-41881, CVE-2022-41915
-        dependencySet(group: 'io.netty', version: '4.1.95.Final') {
+        dependencySet(group: 'io.netty', version: '4.1.107.Final') {
             entry 'netty-buffer'
             entry 'netty-common'
             entry 'netty-codec'
@@ -342,7 +348,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'sscs-common', version: '5.3.1'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.10'
 
-    implementation group: 'com.azure', name: 'azure-core', version: '1.42.0'
+    implementation group: 'com.azure', name: 'azure-core', version: '1.46.0'
     implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.14.2'
 
     implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.8'
@@ -377,14 +383,14 @@ dependencies {
     implementation group: 'org.apache.tika', name: 'tika-core', version: '2.8.0'
     implementation group: 'org.apache.tika', name: 'tika-parsers', version: '2.8.0'
 
-    implementation group: 'org.json', name: 'json', version: '20230618'
+    implementation group: 'org.json', name: 'json', version: '20240205'
 
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.7.1'
 
     implementation group: "com.networknt", name: "json-schema-validator", version: "1.0.81"
     
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.80'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.80'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.85'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.85'
 
     integrationTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.13.0'
 
