--- a/build.gradle
+++ b/build.gradle
@@ -332,7 +332,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '69426a2'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '5.3.3'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.13'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.46.0'
