--- a/build.gradle
+++ b/build.gradle
@@ -333,7 +333,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
     implementation group: 'com.github.hmcts', name: 'sscs-common', version: '5.3.2'
-    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.13'
+    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '9fa561d'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.46.0'
     implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.15.1'
