--- a/build.gradle
+++ b/build.gradle
@@ -373,6 +373,13 @@ dependencies {
     implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.86'
     implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.86'
 
+    //evidence-share depenedencies
+    implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
+    implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.23'
+    // Remove this dependency once the secure doc-store is in use
+    implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
+    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.2.1'
+
     integrationTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.13.0'
 
     functionalTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.13.0'
