--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -177,11 +177,10 @@ sscs-tya-notif:
       AMQP_USERNAME: "RootManageSharedAccessKey"
       TOPIC_NAME: "${SERVICE_NAME}-servicebus-main-topic"
       SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-tya"
-      JOB_SCHEDULER_DB_NAME: "sscsjobscheduler"
-      JOB_SCHEDULER_DB_HOST: ${SERVICE_NAME}-postgresql
-      JOB_SCHEDULER_DB_CONNECTION_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
-      JOB_SCHEDULER_DB_USERNAME: hmcts
-      JOB_SCHEDULER_DB_PASSWORD: "${JOB_SCHEDULER:hmcts}"
+      JOB_SCHEDULER_DB_PASSWORD: "{{ .Values.postgresql.auth.password}}"
+      JOB_SCHEDULER_DB_USERNAME: "{{ .Values.postgresql.auth.username}}"
+      JOB_SCHEDULER_DB_NAME: "{{ .Values.postgresql.auth.database}}"
+      JOB_SCHEDULER_DB_HOST: "{{ .Release.Name }}-postgresql"
       HOURS_START_TIME: 0
       HOURS_END_TIME: 23
       RUN_DB_MIGRATION_ON_STARTUP: true
@@ -209,6 +208,8 @@ sscs-tya-notif:
           - docmosis-api-key
           - notification-key
           - notification-test-key
+    postgresql:
+      enabled: true
 
 sscs-ccd-callback-orchestrator:
   enabled: true
@@ -327,18 +328,6 @@ sscs-hearings-api:
             alias: IDAM_OAUTH2_CLIENT_ID
           - name: idam-sscs-oauth2-client-secret
             alias: IDAM_OAUTH2_CLIENT_SECRET
-
-postgresql:
-  enabled: true
-  primary:
-    initdb:
-      scripts:
-        init.sql: |
-          CREATE DATABASE "sscsjobscheduler" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
-  auth:
-    postgresUsername: hmcts
-    postgresPassword: "${postgresPassword:hmcts}"
-
 
 
 #Enable for queues/topics
