--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -181,6 +181,7 @@ sscs-tya-notif:
       JOB_SCHEDULER_DB_USERNAME: "{{ .Values.postgresql.auth.username}}"
       JOB_SCHEDULER_DB_NAME: "{{ .Values.postgresql.auth.database}}"
       JOB_SCHEDULER_DB_HOST: "{{ .Release.Name }}-postgresql"
+      JOB_SCHEDULER_DB_CONNECTION_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
       HOURS_START_TIME: 0
       HOURS_END_TIME: 23
       RUN_DB_MIGRATION_ON_STARTUP: true
