SSCSSI-34: Initial merge of test es packages into tribs

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -199,7 +199,7 @@ document.pdf.hmctsImgVal=[userImage:hmcts.png]
 document.pdf.hmctsWelshImgKey=welshhmcts2
 document.pdf.hmctsWelshImgVal=[userImage:welshhmcts.png]
 
-evidence-share.submit-types=[PAPER]
+evidence-share.submit-types=PAPER
 exela.addressLine1=HMCTS SSCS
 exela.addressLine2=PO BOX 12626
 exela.addressLine3=Harlow
