--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -140,6 +140,7 @@ feature.elasticsearch.enabled:  ${ELASTIC_SEARCH_FEATURE:false}
 feature.elinksV2.enabled: ${ELINKS_V2_FEATURE_ENABLED:false}
 feature.deleted-redacted-doc.enabled: ${DELETED_REDACTED_DOC_ENABLED:false}
 feature.hearing-recording-filter.enabled: ${UPLOAD_HEARING_FILTER_ENABLED:false}
+feature.citizen-login-service-v2.enabled: ${CITIZEN_LOGIN_SERVICE_V2:false}
 
 case_document_am.url=${CASE_DOCUMENT_AM_URL:http://localhost:4455}
 
