SSCSSI-34: Fix OOM error in int tests

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -169,6 +169,7 @@ jms.enabled=${ENABLE_JMS:false}
 jms.tribunals-to-hearings-api.queue=${JMS_HEARINGS_EVENT_QUEUE_NAME:}
 
 #Evidence Share
+amqp.clientId=sscs-evidence-share
 amqp.amqp-connection-string-template=${JMS_AMQP_CONNECTION_TEMPLATE:amqps://%1s?amqp.idleTimeout=%2d}
 amqp.idleTimeout=${JMS_IDLE_TIMEOUT:3600000}
 amqp.host=${AMQP_HOST:localhost}
