--- a/build.gradle
+++ b/build.gradle
@@ -342,6 +342,7 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.3'
 
     implementation group:'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+    implementation group: 'org.springframework', name: 'spring-jms'
     implementation group: 'org.apache.qpid', name: 'qpid-jms-client', version: '1.10.0'
 
     implementation group: 'org.pitest', name: 'pitest', version:  '1.14.2'
