--- a/build.gradle
+++ b/build.gradle
@@ -223,7 +223,12 @@ sonarqube {
                 "src/main/java/uk/gov/hmcts/reform/sscs/controllers/CreateCaseController.java," +
                 "src/main/java/uk/gov/hmcts/reform/sscs/service/pdf/data/PdfData.java," +
                 "src/main/java/uk/gov/hmcts/reform/sscs/ccd/presubmit/writefinaldecision/esa/EsaWriteFinalDecisionMidEventValidationHandler.java," +
-                "src/main/java/uk/gov/hmcts/reform/sscs/ccd/presubmit/writefinaldecision/uc/UcWriteFinalDecisionMidEventValidationHandler.java"
+                "src/main/java/uk/gov/hmcts/reform/sscs/ccd/presubmit/writefinaldecision/uc/UcWriteFinalDecisionMidEventValidationHandler.java" +
+                "src/main/java/uk/gov/hmcts/reform/sscs/evidenceshare/config/**," +
+                "src/main/java/uk/gov/hmcts/reform/sscs/service/servicebus/messaging/**," +
+                "src/main/java/uk/gov/hmcts/reform/sscs/service/servicebus/TopicConsumer.java," +
+                "src/main/java/uk/gov/hmcts/reform/sscs/docmosis/domain/**," +
+                "src/main/java/uk/gov/hmcts/reform/sscs/docmosis/config/**,"
         property "sonar.host.url", "https://sonar.reform.hmcts.net/"
         property "sonar.pitest.mode", "reuseReport"
         property "sonar.pitest.reportsDirectory", "build/reports/pitest"
