--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -240,7 +240,7 @@ send-letter.url=${SEND_LETTER_SERVICE_BASEURL:http://localhost:4021}
 send-letter.enabled=${SEND_LETTER_SERVICE_ENABLED:true}
 send-letter.maxRetryAttempts=${MAX_RETRY_ATTEMPTS:3}
 
-service.pdf-service.uri=${PDF_SERVICE_BASE_URL:https://docmosis.aat.platform.hmcts.net/rs/render}
+service.pdf-service.uri=${PDF_SERVICE_CONVERT_URL.:https://docmosis.aat.platform.hmcts.net/rs/render}
 service.pdf-service.accessKey=${PDF_SERVICE_ACCESS_KEY:}
 service.pdf-service.health.uri=${PDF_SERVICE_HEALTH_URL:https://docmosis.aat.platform.hmcts.net/rs/status}
 
