--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -112,6 +112,8 @@ xui-webapp:
   enabled: false
 elastic:
   enabled: false
+sscs-evidence-share:
+  enabled: false
 sscs-tya-notif:
   enabled: false
 sscs-ccd-callback-orchestrator:
