SSCSSI-34: disable evidence share from ccd preview chart

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -558,7 +558,7 @@ elastic:
   enabled: true
 
 sscs-evidence-share:
-  enabled: true
+  enabled: false
   java:
     image: hmctspublic.azurecr.io/sscs/evidence-share:latest
     releaseNameOverride: ${SERVICE_NAME}-sscs-evidence-share
