--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -41,6 +41,8 @@ java:
           alias: app-insights-connection-string
         - name: sscs-servicebus-connection-string-tf
           alias: HEARINGS_EVENT_SERVICE_BUS_CONNECTION_STRING
+        - name: evidence-share-topic-shared-access-key
+          alias: AMQP_PASSWORD
   environment:
     SERVER_PORT: 8080
     REFORM_TEAM: sscs
