--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -350,3 +350,9 @@ servicebus:
     queues:
       - name: sscs-orchestrator-queue-preview
       - name: tribunals-to-hearing-api
+
+ccd-def-cleanup:
+  enabled: true
+  change_id: sscs-pr-3575
+  case_type_ids:
+    - Benefit
